--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -58,7 +58,7 @@ p {
 
 /* container below bar */
 
-.homeWrapper {
+.homeWrapper, .viewWrapper {
   background-color: rgba(45, 35, 66, 0.3);
   flex-direction: column;
   align-items: center;
@@ -68,16 +68,25 @@ p {
   border: 7px inset white;
 }
 
+.viewWrapper {
+  margin: 0% 27% 17% 27%;
+  padding: 0;
+}
+
+.viewSection .short {
+  margin: 5% 27% 0 27%;
+}
+
 .projectWrapper {
   background-color: rgba(45, 35, 66, 0.3);
   flex-wrap: wrap;
-  padding: 3% 4%;
-  margin: 0% 27% 10% 27%;
+  padding: 1% 4%;
+  margin: 0% 26% 10% 26%;
   border: 7px inset white;
 }
 
 .projects .padded {
-  margin: 7% 27% 0% 27%;
+  margin: 6% 26% 0% 26%;
 }
 
 /* Desktop */
@@ -110,7 +119,7 @@ li {
   cursor: pointer;
 }
 
-span {
+.mobile {
   display: none;
   color: white;
 }
@@ -162,18 +171,67 @@ span {
   transform: translateY(2px);
 }
 
+/* view.exe extras */
+
+.viewWrapper img {
+  padding: 2.5%;
+  width: 24%;
+  border-radius: 100%;
+}
+
+.shortBio {
+  display: flex;
+  align-items: center;
+  padding-right: 4%;
+}
+
+.lineBreak {
+  display: block;
+  padding: 5%;
+}
+
+.myspace {
+  color: #008ddd;
+  background: white;
+}
+
+.viewWrapper p {
+  background: #36395a6b;
+  font-weight: 700;
+  margin: 4%;
+  padding: 2% 10%;
+  text-align: center;
+  line-height: 22px;
+  font-size: 1.1rem;
+}
+
 /* projects.exe extras */
 
 .fleximg {
-  width: 100%;
+  width: 95%;
 }
 
 .projectWrapper div {
   padding-bottom: 3%;
 }
 
+.projectWrapper span {
+  padding-bottom: 3%;
+  font-family: 'Press Start 2P', cursive;
+  font-size: 0.8rem;
+}
+
+.projectWrapper p {
+  background: #36395a6b;
+  margin-top: 3%;
+  padding: 2.5% 5% 2% 5%;
+  text-align: center;
+  line-height: 22px;
+  /* font-size: 1.1rem; */
+}
+
 .scroller {
-  height: 50vh;
+  height: 60vh;
   overflow-y: scroll;
 }
 
@@ -203,7 +261,7 @@ span {
     margin-top: 0;
     margin: 0 8%;
   }
-  .homeWrapper, .projectWrapper {
+  .homeWrapper, .projectWrapper, .viewWrapper {
     margin: 0 8%;
   }
   .homeWrapper {
@@ -212,7 +270,10 @@ span {
   .projects .padded {
     margin: 0 8%;
   }
-  span {
+  .viewSection .short {
+    margin: 0 8%;
+  }
+  .mobile {
     display: block;
   }
   .catpics {
@@ -220,6 +281,12 @@ span {
   }
   .scroller {
     height: 60vh;
+  }
+  .shortBio {
+    flex-direction: column;
+  }
+  .shortBio img {
+    width: 30%;
   }
 }
 
