--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -13,7 +13,7 @@ body {
 
 /* DRY */
 
-nav, .homeWrapper, .projectWrapper, .desktop, .projectWrapper div, .contactWrapper, form {
+nav, .homeWrapper, .projectWrapper, .desktop, .projectWrapper div, .contactWrapper, form, .navbar {
   display: flex;
 }
 
@@ -24,6 +24,21 @@ nav {
   font-family: 'Press Start 2P', cursive;
   padding: 2px;
   justify-content: space-between;
+  align-items: center;
+}
+
+.navbar {
+  align-items: center;
+  flex-wrap: nowrap;
+  flex-basis: 50%;
+}
+
+.fa-moon {
+  padding-left: 2%;
+}
+
+ul {
+  padding-left: 2%;
 }
 
 li {
@@ -41,6 +56,7 @@ li {
   padding-right: 1%;
   /* flex-basis: 50%; */
   flex-wrap: nowrap;
+  font-size: 0.9rem;
 }
 
 /* Home.exe Section */
@@ -346,7 +362,7 @@ textarea {
 }
 
 .smol {
-  margin: 3% 29% 0 29%;
+  margin: 3% 17% 0 17%;
 }
 
 .warning {
@@ -435,6 +451,37 @@ small {
   }
   .shortBio img {
     width: 30%;
+  }
+  .navigation {
+    display: none;
+  }
+  nav {
+    display: none;
+    width: 25%;
+    height: 13vh;
+    position: absolute;
+    top: 2%;
+    left: 10%;
+  }
+
+  ul {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  li {
+    padding-bottom: 15%;
+    padding: 25% 178% 0% 9%;
+    border-bottom: 2px solid white;
+  }
+  .fa-moon {
+    display: none;
+  }
+  .fa-window-restore {
+    display: block;
+    padding: 2% 3%;
+    margin-right: 10%;
+    position: absolute;
   }
 }
 
